--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
+    "chart.piecelabel.js": "^0.15.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-labels": "^1.1.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
